<resources>
    <string name="app_name">ATM-App</string>
    <string name="app_font">geometry_soft_pro_bold_n</string>
    <string name="title_home">Home</string>
    <string name="title_expenses">Expenses</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add">Add</string>
    <string name="title_account">Account</string>
    <string name="title_tabhost">Tab Host</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="expense_fragment">Expense Fragment</string>
    <string name="income_fragment">Income Fragment</string>
    <string name="total_fragment">Total Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="array">USD|EUR|Shekel</string>
    <!-- Array String -->
    <string-array name="spinner">
        <item>USD</item>
        <item>EUR</item>
        <item>Shekel</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_lname">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- Array String -->
</resources>